# fpl

./: .gitignore  4  README.md  analyze.py  check_hdf5_image_shapes.py  convert_custom_droid_to_lerobot.py  copy_checkpoint_to_iris.sh  copy_infer_output_to_iris.sh  copy_iris_data.sh  copy_to_iris.sh  create_lerobot_conversion.sh  create_new_lerobot.py  data_collection.py  dataset.py  diffusion_policy.sh  fetch_reward_models_val.py  fetch_reward_models_val.sh  flow_model.py  flow_policy.sh  generate_episode_metadata.py  infer.py  infer.sh  infer_haic.sh  infer_single.py  infer_then_train_pi05_haic.sh  iter2_reduced.sh  iter2and3_reduced.sh  iter3_reduced.sh  main.py  make_reward_video.py  make_reward_video_single.py  model.py  plot_graph.py  plot_reward_cumulative.py  plot_reward_curves.py  plot_reward_curves_single.py  plot_single.py  plot_slow_fast_scatter.py  plot_slow_fast_scatter_with_single.py  plot_slow_fast_scatter_with_single_time.py  (+29 more)
diffusion_policy/: .gitignore  conda_environment.yaml  eval_rewards.py
diffusion_policy/reward_model/: reward_functions.py  state_reward_model.py  train_reward_model.py  train_value_function.py
diffusion_policy/scripts/: .nfs00000000002f9cf9000007d6  .nfs00000000003012c5000007d5  collect_initial_scripted_rollouts.py  collect_initial_scripted_rollouts_pickplace.py  collect_rollouts.py  compute_scores_from_scripted.py  eval_conditioned.py  filter_right_peg_success.py  launch_awr.sh  launch_demo_only.sh  launch_demo_success.sh  launch_rhp.sh  launch_single_pref.sh  merge_rollouts.py  plot_wandb_comparison.py  run_pipeline.sh  run_pipeline_object_rearrangement.sh  run_pipeline_pickplace.sh  run_pipeline_slow_fast.sh  run_pipeline_two_pegs.sh  visualize_conditioned_policy.py
real_world/: analyze.py  conda_environment_real.yaml  convert_custom_droid_to_lerobot.py  dataset.py  flow_model.py  model.py  qwen_model.py  tasks.py  visualization.py
resesarch_log/: 2026-05-02_transformer_j15316054_fold_pants_step850.md
slurm/: 15149878.out  15149888.out  15150415.out
(+119 files in other folders)
